<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindMe</string>
    <string name="app_welcome_message">Welcome to RemindMe!</string>
    <string name="action_settings">Settings</string>
    
    <string name="addBill">Add Bill</string>
    <string name="billName">Bill Name</string>
    <string name="amountOfBill">Amount of Bill</string>
    <string name="dueDate">Due Date</string>
    <string name="recurrence">Recurrence</string>
    <string name="submit">Submit</string>
    <string name="listBills">List of Bills</string>  
    
    <string name="title_activity_add_bill">AddBillActivity</string>
    <string name="title_activity_bill_list">BillListActivity</string>
    <string name="createBill">Create Bill</string>
    <string name="billList">View Bill List</string>
    <string name="calendarView">View Calendar</string>

</resources>
